# lab-5-7-1win

./: CMakeLists.txt
include/: Document.hpp  DocumentBuilder.hpp  IndexStore.hpp  InvertedIndex.hpp  Result.hpp  UpdateTransaction.hpp
src/: CMakeLists.txt  DocumentBuilder.cpp  IndexStore.cpp  InvertedIndex.cpp  UpdateTransaction.cpp
tests/: CMakeLists.txt  tests.cpp
